# har

./: .gitignore  Huffman.hs  Makefile  Optparse.hs  README.md  RLE.hs  har.cabal  har.hs  huffman.hs  optparse.hs  package.yaml  rle.hs
app/: har.hs
src/: ArchiveCommon.hs  Compression.hs  LazyByteStringPatterns.hs  Optparse.hs  RLE.hs
src/Compression/: Base.hs  Huffman.hs  RLE.hs
test/: ArbInstances.hs  HuffmanSpec.hs  RLESpec.hs
